# ikp-projekat

./: CMakeLists.txt  Dokumentacija__ikp.docx  README.md  gitignore
Projekat/ahm/: ahm.cpp  ahm.h  simple_array.h
Projekat/heap_manager/: ahm_manager.h
Projekat/tests/test_client/: test_client.cpp
Projekat/tests/test_server/: test_server.cpp
ahm/: allocation_map.h
heap_manager/: ahm_manager.cpp
tests/test_app/: test_app.cpp
tests/test_client/: test_client.cpp
tests/test_threads/: test_threads.cpp
